test/errors/stringNewLine.monga
"asaas"
" asasasas asad \t
 sdsddad\n"